exports[`test Colored 1`] = `
"<a style=\"color: red;\" tabindex=\"0\" class=
\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test No options 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\"></div>
</div></a>
"
`;

exports[`test Option: after 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
<div style=\"font-size: 16px; line-height: 1rem;\">
  After
</div></a>
"
`;

exports[`test Option: before 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div style=\"font-size: 16px; line-height: 1rem;\">
  Before
</div>
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: class 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon class-x\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\"></div>
</div></a>
"
`;

exports[`test Option: compact 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--icon pe-button--compact\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: icon 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: id 1`] = `
"<a id=\"id-x\" tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\"></div>
</div></a>
"
`;

exports[`test Option: raised and animateOnTap 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--icon pe-button--raised\">
<div class=\"pe-button__content\">
  <div class=\"pe-shadow pe-shadow--animated\">
    <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
    <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
  </div>
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: type (large) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--large\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: type (medium) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--medium\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: type (regular) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: type (small) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--small\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Option: url 1`] = `
"<a tabindex=\"0\" href=\"#!/shadow\" class=\"pe-button pe-button--icon\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;
